[package]
name = "map-obj"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
description = "Recursively map over the keys and values of a JSON object with a closure. A faithful port of the map-obj npm package."
documentation = "https://docs.rs/map-obj"
repository = "https://github.com/trananhtung/map-obj"
homepage = "https://github.com/trananhtung/map-obj"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["map", "object", "keys", "values", "json"]
categories = ["data-structures", "value-formatting"]
authors = ["trananhtung"]
exclude = ["/.github", "/.gitignore"]

[dependencies]
serde_json = { version = "1", features = ["preserve_order"] }

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
